--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
           <div class="col-sm-8 p-4 about" id="about">
             <h2>About</h2>
             <p>
+            Portland, Oregon-based drummer turned singer-songwriter.<br><br>
             Teardrops, my first solo album, is a blend of surf rock, piano ballads, and feel-good tunes that pair well with summer road trips and rainy days. <br><br>
             The album has a loose and breezy vibe that reflects a spontaneous approach to songwriting. Suzy Lee was inspired by the birth of my friend's baby, for whom I wrote a quick piano tune the day she was born. Teardrops began as a loop jam with improvised lyrics. Bad Times popped into my head while I was watching a film set in the rural midwest, with country/folk singers crooning over the car radio.<br><br>
             The songs flow through a range of styles, but what keeps them together is a sense that it feels right, and that even in dark times, we can still find some light.<br><br>
