improved listen links

--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
         </div>
 
         <div class="row listenon">
-          <div class="col-sm-4">
+          <div class="col-lg-4">
             <h4 class="listen">
               <a href="https://open.spotify.com/album/7nF83Rh4ZzqKUOCaWnvVQM?si=Ht7c0X-dTXq5vv3rB4f_eA"
                 ><i class="fa-brands fa-spotify"></i> Listen on Spotify</a
               >
             </h4>
           </div>
-          <div class="col-sm-4">
+          <div class="col-lg-4">
             <h4 class="listen">
             <a href="https://esobee.bandcamp.com/album/teardrops"
               ><i class="fa-brands fa-bandcamp"></i> Listen on Bandcamp</a
             >
             </h4>
           </div>
-          <div class="col-sm-4">
+          <div class="col-lg-4">
             <h4 class="listen">
             <a href="#"
               >
