--- a/index.html
+++ b/index.html
@@ -145,10 +145,25 @@
       </div>
 
       <footer class="m-3">
+        <h2>Get in touch</h2>
         <a href="mailto:stephanbarry@gmail.com" class="contact" id="email">
-          <h3 class="p-0"><i class="fas fa-envelope"></i> Get in touch</h3>
-          <p>stephanbarry@gmail.com</p>
+          <i class="fas fa-envelope"></i> stephanbarry@gmail.com
         </a>
+        <br>
+         <a href="https://www.instagram.com/esobee_music/"> 
+          <i class="fa-brands fa-instagram"></i> @esobee_music
+        </a>
+
+        <br>
+        <br>
+
+       <small>
+        Website created by Julia Giebultowicz
+       </small>
+          
+       <br>
+       <br>
+
       </footer>
     </div>
 
