--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
         <div class="row listenon">
           <div class="col-lg-4">
             <h4 class="listen">
-              <a href="https://open.spotify.com/album/7nF83Rh4ZzqKUOCaWnvVQM?si=Ht7c0X-dTXq5vv3rB4f_eA"
+              <a href="https://open.spotify.com/album/7nF83Rh4ZzqKUOCaWnvVQM?si=Ht7c0X-dTXq5vv3rB4f_eA" target="_blank"
                 ><i class="fa-brands fa-spotify"></i> Listen on Spotify</a
               >
             </h4>
           </div>
           <div class="col-lg-4">
             <h4 class="listen">
-            <a href="https://esobee.bandcamp.com/album/teardrops"
+            <a href="https://esobee.bandcamp.com/album/teardrops" target="_blank"
               ><i class="fa-brands fa-bandcamp"></i> Listen on Bandcamp</a
             >
             </h4>
           </div>
           <div class="col-lg-4">
             <h4 class="listen">
-            <a href="#"
+            <a href="#" target="_blank"
               >
               <i class="fa-brands fa-itunes"></i> Listen on Apple Music</a
             >
@@ -98,20 +98,16 @@
 
       
         <div class="row album">
-          <div class="col-sm-6 p-4">
-              <a href="https://esobee.bandcamp.com/album/teardrops">
-                <!--<p class="play">
-                  <i class="fa-solid fa-circle-play"></i>
-                </p>-->
+          <div class="col-lg-6 p-4">
+              <a href="https://esobee.bandcamp.com/album/teardrops" target="_blank">
                 <img src="/images/album_art.jpg" class="img-fluid" alt="" />
               </a>
           </div>
 
-          <div class="col-sm-6 p-4 albuminfo">
+          <div class="col-lg-6 p-4 albuminfo">
             <h2>Teardrops</h2>
             <p class="albumdesc">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
-              eaque exercitationem dolore
+              Debut album from Eso Bee. Check it out here. Thanks for listening.
             </p>
             <iframe
               style="border: 0; width: 100%; height: 373px"
@@ -146,11 +142,11 @@
 
       <footer class="m-3">
         <h2>Get in touch</h2>
-        <a href="mailto:stephanbarry@gmail.com" class="contact" id="email">
-          <i class="fas fa-envelope"></i> stephanbarry@gmail.com
+        <a href="mailto:esobeemusicpdx@gmail.com" class="contact" id="email">
+          <i class="fas fa-envelope"></i> esobeemusicpdx@gmail.com
         </a>
         <br>
-         <a href="https://www.instagram.com/esobee_music/"> 
+         <a href="https://www.instagram.com/esobee_music/" target="_blank"> 
           <i class="fa-brands fa-instagram"></i> @esobee_music
         </a>
 
@@ -158,7 +154,7 @@
         <br>
 
        <small>
-        Website created by Julia Giebultowicz
+        Website created by <a href="https://www.juliagiebultowicz.com/" target="_blank">Julia Giebultowicz</a>
        </small>
           
        <br>
