--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
           <div class="col-lg-6 p-4 albuminfo">
             <h2>Teardrops</h2>
-            <p class="albumdesc">
+            <!--<p class="albumdesc">
               Debut album from Eso Bee. Check it out here. Thanks for listening.
-            </p>
+            </p>-->
             <iframe
               style="border: 0; width: 100%; height: 373px"
               src="https://bandcamp.com/EmbeddedPlayer/album=2807779792/size=large/bgcol=ffffff/linkcol=63b2cc/artwork=none/transparent=true/"
@@ -141,11 +141,11 @@
       </div>
 
       <footer class="m-3">
-        <h2>Get in touch</h2>
+        <!--<h2>Get in touch</h2>
         <a href="mailto:esobeemusicpdx@gmail.com" class="contact" id="email">
           <i class="fas fa-envelope"></i> esobeemusicpdx@gmail.com
         </a>
-        <br>
+        <br>-->
          <a href="https://www.instagram.com/esobee_music/" target="_blank"> 
           <i class="fa-brands fa-instagram"></i> @esobee_music
         </a>
