--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
           <div class="col-lg-4">
             <h4 class="listen">
-            <a href="#" target="_blank"
+            <a href="https://music.apple.com/us/album/teardrops/1633905345" target="_blank"
               >
               <i class="fa-brands fa-itunes"></i> Listen on Apple Music</a
             >
@@ -146,7 +146,7 @@
           <i class="fas fa-envelope"></i> esobeemusicpdx@gmail.com
         </a>
         <br>-->
-         <a href="https://www.instagram.com/esobee_music/" target="_blank"> 
+         <a href="https://www.instagram.com/esobee_music/" id="email" target="_blank"> 
           <i class="fa-brands fa-instagram"></i> @esobee_music
         </a>
 
